Initial 1.19 port compiles & starts up OK, not much tested